--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "dotenv": "^8.0.0",
     "mocha": "^6.1.4"
   }
 }
