--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/DeliaCodes/pop-lottery#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
